# mutclip

./: .gitignore  Makefile  README.md  compose.yaml
client/: .env  .gitignore  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json
client/app/: layout.tsx  loading.tsx  page.ts  page.tsx
client/app/[clipId]/: hooks.ts  page.module.css  page.tsx
client/app/[clipId]/components/: ControlButton.tsx  Downloader.tsx  Preview.tsx  Uploader.tsx
client/components/: ControlButton.module.css  ControlButton.tsx  IndexLoader.tsx  MessageBox.module.css  MessageBox.tsx  MessageEntry.module.css  MessageEntry.tsx  NewClipRedirect.ts  Preview.module.css  Preview.tsx
client/contexts/: MessageQueueContext.tsx
client/src/app/: actions.ts  error.tsx  layout.tsx  loading.tsx  page.module.css  page.tsx
client/src/app/[clipId]/: hooks.ts  page.tsx
client/src/app/components/: IdentifierInput.module.css  IdentifierInput.tsx  InputBox.module.css  (+1 more)
client/src/components/: ControlButton.module.css  ControlButton.tsx
client/src/contexts/: BodyRefContext.tsx  MessageQueueContext.tsx
client/src/pb/: clip.ts
client/src/types/: clipboard.ts
client/types/: clip.ts  clip.tsx  clipboard.ts
kube/: client.yaml  ingress.yaml  namespace.yaml  server.yaml
proto/: clip.proto
server/: .air.toml  .empty.rs  Cargo.toml  Dockerfile  clipboard.py  go.mod  go.sum  main.py  mutclip.cabal
server/app/: Clipboard.hs  Main.hs
server/cmd/server/: server.go
server/pkg/clipboard/: clipboard.go  clipboard_test.go  error.go  error_test.go
server/pkg/clipservice/: clipservice.go
server/pkg/msg/: msg.go
server/pkg/net/: cid.go  msg.go  net.go
server/pkg/pb/clip/: clip.pb.go
server/pkg/proto/: proto.go
server/src/: engine.rs  main.rs  result.rs
server/src/pb/: clip.rs
(+15 files in other folders)
