[package]
name = "mutclip-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
axum = { version = "0.8.3", features = ["ws"] }
env_logger = "0.11.8"
futures = "0.3.31"
http = "1.3.1"
log = "0.4.27"
prost = "0.13.5"
rand = "0.9.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7.15"
uuid = { version = "1.16.0", features = ["v7"] }
