cabal-version:   3.0
name:            mutclip
version:         0.1.0.0
license:         NONE
author:          amhsm6@gmail.com
maintainer:      amhsm6
build-type:      Simple

common warnings
    ghc-options: -threaded -Wall

executable mutclip
    import:           warnings

    main-is:          Main.hs

    other-modules:    Clipboard

    build-depends:    base ^>=4.18.2.1
                    , mtl
                    , lens
                    , stm
                    , bytestring
                    , text
                    , containers
                    , lens-aeson
                    , servant-server
                    , servant-websockets
                    , websockets
                    , warp

    hs-source-dirs:   app

    default-language: Haskell2010
